--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="edu.sjsu.writingcenter" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/icon"
@@ -41,6 +43,13 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="edu.sjsu.writingcenter.WelcomeActivity" />
         </activity>
+        <activity android:name=".PDFActivity"
+            android:label="Resource View"
+            android:parentActivityName=".ResourcesActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+            android:value="edu.sjsu.writingcenter.ResourcesActivity" />
+            </activity>
     </application>
 
 </manifest>
