Start work on searching through PDFs

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="edu.sjsu.writingcenter.WelcomeActivity" />
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
         </activity>
         <activity
             android:name=".LocationActivity"
